Add UGMM redirects to default plug nginx website

--- a/plug-website/plug.org.au.conf
+++ b/plug-website/plug.org.au.conf
@@ -17,6 +17,14 @@ server {
 
 	server_name mail.po1.plug.org.au mail.plug.org.au services.plug.org.au edison.plug.org.au *.dev.plug.org.au;
 
+#	We considered a smart redirect to UGMM but went with something safer
+#	location ~ ^/ugmm/(.*) {
+#		return 302 http://ugmm.plug.org.au/$1$is_args$query_string;#
+#	}
+	location ~ ^/ugmm {
+		return 302 http://ugmm.plug.org.au/;
+	}
+
 	location / {
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
