--- a/letsencrypt/tasks/main.yml
+++ b/letsencrypt/tasks/main.yml
@@ -11,4 +11,4 @@
 - name: certbot hook, reload nginx
   lineinfile:
     dest: /etc/letsencrypt/cli.ini
-    content: 'deploy-hook = systemctl reload nginx'
+    line: 'deploy-hook = systemctl reload nginx'
