Add production URLs to nginx configs

--- a/mailman/lists.plug.org.au.conf
+++ b/mailman/lists.plug.org.au.conf
@@ -15,7 +15,7 @@ server {
 
 	index index.html index.htm index.nginx-debian.html;
 
-	server_name lists2.plug.org.au;
+	server_name lists2.plug.org.au lists.plug.org.au;
 
 	location / {
 		# Redirect user to the proper mailman location
@@ -71,7 +71,7 @@ server {
 	listen 80;
 	listen [::]:80;
 
-	server_name lists2.plug.org.au;
+	server_name lists2.plug.org.au lists.plug.org.au;
 
 	return 301 https://$host$request_uri;
 }
