--- a/plug-website/plug.org.au.conf
+++ b/plug-website/plug.org.au.conf
@@ -15,7 +15,7 @@ server {
 
 	index index.html index.htm index.nginx-debian.html;
 
-	server_name mail.po1.plug.org.au mail.plug.org.au services.plug.org.au edison.plug.org.au *.dev.plug.org.au plug.org.au;
+	server_name mail.po1.plug.org.au mail.plug.org.au services.plug.org.au edison.plug.org.au *.dev.plug.org.au plug.org.au www.plug.org.au;
 
 #	We considered a smart redirect to UGMM but went with something safer
 #	location ~ ^/ugmm/(.*) {
@@ -49,7 +49,7 @@ server {
         listen 80 ;
         listen [::]:80 ;
 
-        server_name mail.po1.plug.org.au mail.plug.org.au services.plug.org.au edison.plug.org.au *.dev.plug.org.au plug.org.au;
+        server_name mail.po1.plug.org.au mail.plug.org.au services.plug.org.au edison.plug.org.au *.dev.plug.org.au plug.org.au www.plug.org.au;
 
         return 301 https://$host$request_uri;
 }
