Switch from "include" to "import_playbook" for Ansible 2.16+ compat

--- a/site.yml
+++ b/site.yml
@@ -356,4 +356,4 @@
     - name: restart mumble-server
       service: name=mumble-server state=restarted
 
-- include: mail_servers.yml
+- import_playbook: mail_servers.yml
