site.yml, dns: update DNS configuration to match what was on Edison
Namely:
 * Install the current version of the zone file. Since ACME challenges
   are in their own zone file, let's go back to managing it here.
 * Install zones for _acme-challenge subdomains with "force: false" so
   we don't overwrite any current challenges.
 * Store _acme-challenge zone files in /var/lib/knot/acme, so knot can
   write to them.
 * Correct the permissions: only the _acme-challenge zone files should
   be owned by knot. Everything else should be owned by root so it can't
   be changed.

--- a/site.yml
+++ b/site.yml
@@ -67,13 +67,40 @@
     template:
       src: dns/knot.conf.j2
       dest: /etc/knot/knot.conf
-      owner: knot
+      owner: root
       group: knot
       mode: '0640'
     notify: reload knot
 
-  - name: DNS - Add example plug.org.au zonefile
-    template: src=dns/plug.org.au.example.zone.j2 dest=/etc/knot/plug.org.au.example.zone owner=knot group=knot mode=0644
+  - name: DNS - Add plug.org.au zonefile
+    template:
+      src: dns/plug.org.au.zone.j2
+      dest: /etc/knot/plug.org.au.zone
+      owner: root
+      group: root
+      mode: '0644'
+    notify: reload knot
+
+  - name: DNS - ensure /var/lib/knot/acme exists
+    file:
+      path: /var/lib/knot/acme
+      state: directory
+      owner: knot
+      group: knot
+      mode: '0770'
+
+  - name: DNS - Create _acme-challenge zone files if they don't exist
+    template:
+      src: dns/{{ item }}.zone.j2
+      dest: /var/lib/knot/acme/{{ item }}.zone
+      owner: knot
+      group: knot
+      mode: '0660'
+      force: false
+    loop:
+      - _acme-challenge.plug.org.au
+      - _acme-challenge.po1.plug.org.au
+    notify: reload knot
 
   #role:nginx
   # Currently disabled as handled in/by mail_servers
