--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -31,9 +31,11 @@
 
   - name: Ansible - install key packages
     apt:
+      update_cache: yes
       name:
         - ansible
         - python3-apt
+        - python3-debian
         - git
       state: latest
 
