--- a/roles/borgbackup/tasks/main.yml
+++ b/roles/borgbackup/tasks/main.yml
@@ -39,3 +39,15 @@
     owner: root
     group: root
     mode: 0600
+
+- name: Ensure ch-s012.rsync.net's SSH host key is known
+  known_hosts:
+    name: ch-s012.rsync.net
+    key: ch-s012.rsync.net ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIO5lfML3qjBiDXi4yh3xPoXPHqIOeLNp66P3Unrl+8g3
+    path: /root/.ssh/known_hosts
+
+- name: Enable daily backups via cron
+  file:
+    state: link
+    src: /root/bin/borgauto.sh
+    dest: /etc/cron.daily/borgbackup
