Make base redirect for website point to same host

--- a/mailman/lists.plug.org.au.conf
+++ b/mailman/lists.plug.org.au.conf
@@ -19,7 +19,7 @@ server {
 
 	location / {
 		# Redirect user to the proper mailman location
-		return 302 https://lists.plug.org.au/mailman/listinfo;
+		return 302 https://$host/mailman/listinfo;
 	}
 
 	location /media {
