Move base tasks to base role. Run initial roles as normal rather than import_role.

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,17 +1,63 @@
 ---
 # Name: Install and configure some base packages
 
+- name: Apt - enable bookworm-backports
+  deb822_repository:
+    name: bookworm-backports
+    types: deb
+    uris: http://deb.debian.org/debian
+    suites: bookworm-backports
+    components:
+      - main
+      - contrib
+      - non-free
+    signed_by: /usr/share/keyrings/debian-archive-keyring.gpg
+
 - name: Install essential utils
-  apt: 
+  apt:
     name:
       - openssh-server
       - nano
       - joe
       - git
+      - vim
+      - emacs
       - screen
       - tmux
       - molly-guard
-      - python-apt
+      - links
+      - eatmydata
+      - etckeeper
+      - mlocate
       - man-db
+      - parallel
+      - bmon
+      - dstat
+      - strace
+      - pv
+      - time
+      - devscripts
+      - rsync
       - curl
     state: latest
+
+- name: Set timezone
+  timezone:
+    name: Australia/Perth
+
+- name: Set nano as default editor
+  alternatives:
+    name: editor
+    path: /bin/nano
+
+- name: Install build-essential
+  apt: name=build-essential state=latest
+
+- name: Create bin directory in /root/ for storing util scripts
+  file:
+    path: /root/bin
+    state: directory
+    owner: root
+    group: root
+    mode: 0700
+    recurse: yes
