roles: move ugmm task to a role, installing deb from Github releases

--- a/site.yml
+++ b/site.yml
@@ -11,25 +11,10 @@
     - borgbackup
     - plug-website
     - ldap-server
-    # - ugmm
+    - ugmm
     - fail2ban
     - mumble-server
     - icecast
     - mailman2
-
-  tasks:
-  #role:php
-  - name: PHP - Install php-fpm
-    apt: name=php-fpm
-    # TODO Configure php-fpm
-
-  #role:ugmm
-  - name: UGMM - Install smarty3 templating engine
-    apt: name=smarty3 state=latest
-
-  - name: UGMM - Install LDAP PHP module
-    apt: name=php-ldap state=latest
-    # TODO nginx cofig
-    # TODO php pool?
 
 - import_playbook: mail_servers.yml
