--- a/roles/ugmm/templates/ugmm.plug.org.au.conf
+++ b/roles/ugmm/templates/ugmm.plug.org.au.conf
@@ -1,6 +1,24 @@
+# {{ ansible_managed }}
+
+map $uri $ugmm_script_name {
+    default =404;
+    /ajax.php              /ajax.php;
+    /ctte-editmember       /ctte-editmember.php;
+    /ctte-members          /ctte-members.php;
+    /ctte-newmember        /ctte-newmember.php;
+    /logout                /logout.php;
+    /member-editdetails    /member-editdetails.php;
+    /member-editforwarding /member-editforwarding.php;
+    /member-editpassword   /member-editpassword.php;
+    /member-editshell      /member-editshell.php;
+    /memberself            /memberself.php;
+    /resendack             /resendack.php;
+    /resetpassword         /resetpassword.php;
+    /signup                /signup.php;
+}
+
 server {
     root /usr/share/plug-ugmm/www;
-    index index.php index.html index.htm index.nginx-debian.html;
     server_name ugmm.plug.org.au;
 
     error_log /var/log/nginx/error.log notice;
@@ -8,11 +26,7 @@ server {
 
     # Handle root path, i.e. http://ugmm.plug.org.au/
     location = / {
-        rewrite .* /memberself;
-    }
-
-    location / {
-        try_files $uri $uri/ =404;
+        return 302 /memberself;
     }
 
     # Forced prefix for old path
@@ -20,37 +34,15 @@ server {
         rewrite .* /memberself permanent;
     }
 
-    # Forced prefix for JavaScript files installed from system packages
-    location ^~ /javascript {
-        alias /usr/share/javascript;
+    location ~ \.(css|gif|png|ico)$ {
     }
 
-    # Forced prefixes for images from PLUG website
-    location ^~ /images {
-        alias /var/www/plug.org.au/images;
-    }
-    location ^~ /favicon.ico {
-        ## alias /var/www/plug.org.au/images/favicon.ico;
-        alias /var/www/plug.org.au/favicon.ico;
-    }
-
-    # Paths without an extension after the first component are handled by
-    # PHP files
-    location ~ ^/[^./]+(/|$) {
-        rewrite ^(/[^./]+)(/.*|$) $1.php$2 last;
-    }
-
-    # Handle rewritten PHP URLs
-    location ~ [^/]\.php(/|$) {
-        # Mitigate https://httpoxy.org/ vulnerabilities
-        fastcgi_param HTTP_PROXY "";
-
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/run/php/php7.0-fpm.sock;
-    }
-
-    location ~ /\.ht {
-        deny all;
+    location / {
+        try_files $ugmm_script_name =404;
+        include fastcgi.conf;
+        fastcgi_param SCRIPT_NAME $ugmm_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$ugmm_script_name;
+        fastcgi_pass unix:/run/php/php-fpm.sock;
     }
 
     listen 443 ssl; # managed by Certbot
@@ -58,7 +50,6 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/plug.org.au/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
 }
 
 server {
