roles: update ldap-server, ugmm, and mailman2 roles
* Make sure /etc/ldap/schema directory exists before adding schemas
* Make ugmm role depend on nginx and schedule nginx reloads
* Use archive.debian.org to get the old mailman packages

--- a/roles/ldap-server/tasks/main.yml
+++ b/roles/ldap-server/tasks/main.yml
@@ -35,6 +35,17 @@
     - /etc/ldap/schema/nis.schema
     - /etc/ldap/schema/nis.ldif
 
+- name: Ensure LDAP schema directory exists
+  file:
+    path: "{{ item }}"
+    state: directory
+    owner: root
+    group: root
+    mode: 0755
+  loop:
+    - /etc/ldap
+    - /etc/ldap/schema
+
 - name: Install rfc2307bis schema
   copy:
     src: rfc2307bis.ldif
@@ -54,6 +65,7 @@
     name:
       - slapd
       - ldap-utils
+      - libldap-common
       - python3-ldap
     state: latest
 
