--- a/roles/ugmm/templates/ugmm.plug.org.au.conf
+++ b/roles/ugmm/templates/ugmm.plug.org.au.conf
@@ -14,7 +14,7 @@ map $uri $ugmm_script_name {
     /memberself            /memberself.php;
     /resendack             /resendack.php;
     /resetpassword         /resetpassword.php;
-    /signup                /signup.php;
+    #/signup                /signup.php;
 }
 
 server {
